<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="settings">
    <PreferenceCategory
        android:title="@string/general"
        android:key="pref_key_general_settings"
        >
        <ListPreference
            android:entries="@array/themeType"
            android:key="themeKey"
            android:entryValues="@array/themeValues"
            android:defaultValue="0"
            android:title="Theme"
            android:dialogTitle="Choose theme"
            />
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_name"
            android:inputType="textCapWords"
            android:key="example_text"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_name" />

        <ListPreference
            android:entries="@array/during_class"
            android:key="@string/duringClass"
            android:entryValues="@array/during_class_values"
            android:defaultValue="0"
            android:title="During Class"
            android:dialogTitle="During Class"
            android:summary="Set phone to mute or vibrate during class"
        />

        <ListPreference
            android:entries="@array/data"
            android:key="@string/data"
            android:entryValues="@array/dataV"
            android:defaultValue="1"
            android:title="Data"
            android:dialogTitle="Data"
            android:summary="Turn off data during class"
        />

        <Preference
            android:defaultValue="true"
            android:key="clearSchedule"
            android:maxLines="2"
            android:summary="Delete class schedule"
            android:title="Clear Schedule" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/notification"
        android:key="pref_key_storage_settings"
        >

    <SwitchPreference
        android:defaultValue="true"
        android:id="@+id/switchPref"
        android:key="notifications_new_message"
        android:maxLines="2"
        android:title="@string/pref_title_new_message_notifications" />
        <ListPreference
            android:dependency="notifications_new_message"
            android:key="notification_dialog"
            android:title="Notification Type"
            android:entryValues="@array/not_type_values"
            android:defaultValue="1"
            android:entries="@array/not_type"
            android:dialogTitle="Notification Type"

        />
    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />
    <Preference
        android:key="key_volume"
        android:dependency="notifications_new_message"
        android:title="Volume"
    />

    </PreferenceCategory>
</PreferenceScreen>
